hello-ansibleapp/ansibleapp/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-openshift-svc
  labels:
    name: hello-openshift-svc
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
  selector:
    name: hello-openshift
